--- a/Lang/advanced-access-manager.pot
+++ b/Lang/advanced-access-manager.pot
@@ -1,9 +1,12 @@
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: AAM\n"
 "POT-Creation-Date: 2015-11-22 10:19-0500\n"
 "PO-Revision-Date: \n"
+"Last-Translator: WPAAM <support@wpaam.com>\n"
 "Language-Team: WP AAM <vasyl@vasyltech.com>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,8 +15,6 @@ msgstr ""
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __\n"
 "X-Poedit-Basepath: ..\n"
-"Last-Translator: \n"
-"Language: en_US\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: media/js/aam-ui.js:43 media/js/aam-ui.js:1220
